url 고치고 설명 조금씩 업데이트 하기

--- a/_posts/2019-01-07-index.md
+++ b/_posts/2019-01-07-index.md
@@ -16,7 +16,7 @@ comments: true
 
 - 원하는 데이터를 빠르게 찾을 수 있게 색인을 하는 것
 - 실제 data(record)는 정렬이 되어 있을 수도 있고, 안되있을 수도 있다.
-- 구성 : 탐색 키(rid), 실제 레코드를 가리키는 포인터
+- 구성 : 탐색 키(rid) + 실제 레코드를 가리키는 포인터
 (Data record with key value k)
 
 - 장점
@@ -36,10 +36,11 @@ comments: true
 ## Single Level Index
 - 정렬되어 있기 때문에 이진 탐색에 좋다.
 - where key = 1003 인덱스가 걸린 컬럼의 where문 =(equality)(equality search)이 빠르다
-- 메모리에 index table의 데이터 크기가 본 table의 것보다 작으므로 더 많은 양이 한번에 올라올 수 있기 때문에 탐색 시간이 빨라진다.
-- 인덱스를 primary key에 걸면 *Primary Index(기본 인덱스)*, 다른 컬럼에 걸면 *dary Index(보조 인덱스)* 이다.
+- 메모리에 index table의 데이터 크기가 본 table의 것보다 작으므로 테이블을 탐색할 수 있는 양이 더 늘어나, 더 많은 양이 한번에 할 수 있기 때문에 탐색시간이 단축된다.
+- 인덱스를 primary key에 걸면 *Primary Index(기본 인덱스)*, 다른 컬럼에 걸면 *Secondary Index(보조 인덱스)* 이다.
 
-- Ordered Indexing is of two types
+
+## Ordered Indexing is of two types
   - Dense Index
   - Sparse Index
 
@@ -48,13 +49,17 @@ comments: true
 <span style="background-color:yellow"><b>한 index에 원하는 record가 바로 매칭된다.</b></span>
 - 밀집 인덱스
 
-![dense index](https://dl.dropbox.com/s/jutcqapozpytwjo/Screenshot%202019-01-09%2014.00.47.png)
+
+![dense index](/images/2019-01-07-index/dense_index.png)
 
 
 ### Sparse Index
-<span style="background-color:yellow"><b>index에  data block이 매칭된다.</b></span>
+<span style="background-color:yellow"><b>index에 data block이 매칭된다.</b></span>
 - 느슨한 인덱스
 - block 속에서 진짜 자기가 원하는 값을 찾아야 한다.
+
+
+![sparse_index](/images/2019-01-07-index/sparse_index.png)
 
 
 ## Composite Index
@@ -67,7 +72,7 @@ comments: true
   - 이런 경우엔 (gender, having-item) 두 컬럼에 composite index를 걸 수 있음
   - 인덱스에 걸려있는 것 중에서 먼저 걸린 index를 먼저 찾는다.
   - 28개의 남자들 중에서 pen을 든 사람을찾는 것보다, pen을 든 사람들 중에서 남자를 찾는 것이 더 빠름! -> 따라서 (having-item, gender)의 순서로 composite Index를 걸자!
-  - <span style="background-color:yellow"><b>즉 빈도수가 적은 인덱스를 먼저 거는게 좋다.</b></span>
+  - <span style="background-color:#FFCCCC"><b>즉 빈도수가 적은 인덱스를 먼저 거는게 좋다.</b></span>
 - 결합 인덱스를 만들어보자
   -
   ```
@@ -82,12 +87,14 @@ comments: true
   - c2를 먼저 되고, 그다음에 c3 순서대로 정렬, c4 순서대로 정렬
 그다음에 data 가리키는 pointer
 
-![composite index](https://dl.dropbox.com/s/q2tmwhf1slemp91/Screenshot%202019-01-09%2015.45.17.png)
+
+<img alt="success" src = "/images/2019-01-07-index/composite_index.png"/>
+
 
 ## Multi Level Index
 <span style="background-color:yellow"><b>인덱스 레벨이 많으면 </b></span>
 
-![multilevel index](https://dl.dropbox.com/s/2g4b7bf0iwimsu5/Screenshot%202019-01-09%2016.17.29.png)
+![multilevel index](/images/2019-01-07-index/multilevel_index.png)
 
 - 데이터가 커지면 index 크기 역시 커집니다.
 - 그러므로 single level index를 사용할 수가 없어 multilevel index를 사용합니다.
