--- a/_posts/2019-01-07-index.md
+++ b/_posts/2019-01-07-index.md
@@ -57,6 +57,7 @@ comments: true
 <span style="background-color:yellow"><b>index에 data block이 매칭된다.</b></span>
 - 느슨한 인덱스
 - block 속에서 진짜 자기가 원하는 값을 찾아야 한다.
+- data를 fragnation이 일어나지 않고, 효율성을 높이기 위해서 블록 단위로 놓는 것이다.
 
 
 ![sparse_index](/images/2019-01-07-index/sparse_index.png)
@@ -65,14 +66,18 @@ comments: true
 ## Composite Index
 <span style="background-color:yellow"><b>여러개의 column에 indexing</b></span>
 
+
+<img alt="success" src = "/images/2019-01-07-index/composite_index.png"/>
+
+
 - single index가 한 cloumn에 indexing을 하는 것과 다르게 여러개의 column에 indexing을 한다.
 - 예제
   - 선린인터넷고 웹운영과 relation에 총 30명의 사람(2명이 female, 28명이 male)이 있고, 각자 물건들을 가지고 있음.(2명은 펜, 또 다른 3명은 지우개)
   - 이런 류의 query문이 많다고 가정하자 ```  where gender = ‘male’ and having-item = ‘pen’; where gender = ‘female’ and having-item = ‘eraser’; ```
   - 이런 경우엔 (gender, having-item) 두 컬럼에 composite index를 걸 수 있음
-  - 인덱스에 걸려있는 것 중에서 먼저 걸린 index를 먼저 찾는다.
-  - 28개의 남자들 중에서 pen을 든 사람을찾는 것보다, pen을 든 사람들 중에서 남자를 찾는 것이 더 빠름! -> 따라서 (having-item, gender)의 순서로 composite Index를 걸자!
-  - <span style="background-color:#FFCCCC"><b>즉 빈도수가 적은 인덱스를 먼저 거는게 좋다.</b></span>
+  - 인덱스에 걸려있는 것 중에서 먼저 걸린 index를 먼저 찾는다.(예제로 따지면 gender가 앞에 있으니 gender를 찾고 having-item을 찾는다.₩)
+  - 28명의 남자들 중에서 pen을 든 사람을찾는 것보다, pen을 든 사람들 중에서 남자를 찾는 것이 더 빠름! -> 따라서 (having-item, gender)의 순서로 composite Index를 걸자!
+  - <span style="background-color:#FFCCCC"><b>즉 빈도수가 적은 인덱스를 먼저 거는게 더 좋다.</b></span>
 - 결합 인덱스를 만들어보자
   -
   ```
@@ -88,18 +93,17 @@ comments: true
 그다음에 data 가리키는 pointer
 
 
-<img alt="success" src = "/images/2019-01-07-index/composite_index.png"/>
-
-
 ## Multi Level Index
-<span style="background-color:yellow"><b>인덱스 레벨이 많으면 </b></span>
+<span style="background-color:yellow"><b>인덱스 레벨이 많으면 multi level index</b></span>
 
 ![multilevel index](/images/2019-01-07-index/multilevel_index.png)
 
+- 인덱스를 위한 인덱스를 위한 인덱스를 위한… 인덱스!
 - 데이터가 커지면 index 크기 역시 커집니다.
 - 그러므로 single level index를 사용할 수가 없어 multilevel index를 사용합니다.
 - inner index(원래 인덱스)를 작은 색인으로 분할하여 outer index를 작게 만든다.
 - 그로 인한 *단점으로 I/O가 자주 일어난다.*
+- 실제 데이터베이스 파일과 함께 디스크에 저장됩니다.
 
 
 ---
