--- a/_posts/2019-01-07-index.md
+++ b/_posts/2019-01-07-index.md
@@ -9,7 +9,10 @@ comments: true
 
 이 컨텐츠는 시리즈물입니다.  
 [db index 1편] index 란?: https://joosjuliet.github.io/index/  
-[db index 2편] index structure란?: https://joosjuliet.github.io/index_structure/   
+[db index 2편] index structure란?:  
+https://joosjuliet.github.io/index_structure/  
+[db index 3편] index structure의 종류와 선정 지침  
+https://joosjuliet.github.io/index_guidline/  
 
 # Index란?
 <span style="background-color:yellow"><b>records의 특정 data를 기준으로 빠르게 검색을 할 수 있게 records를 구조화 하는 것</b></span>
