--- a/_posts/2018-11-25-os1.md
+++ b/_posts/2018-11-25-os1.md
@@ -6,64 +6,73 @@ category: OS
 tags: [ 'computer_science', 'OS', '글또2기' ]
 comments: true
 ---
-
 # Operating System이 주로 하는 일
-
 - Task management (스케줄링)
 - Memory management
 - Resource control
 - Intertask communications and synchronization
 
 
+
+
 # Batch System
 <span style="background-color:yellow"><b>컴퓨터 프로그램 흐름에 따라 순차적으로 자료를 처리하는 방식 </b></span>
-
 system의 실행시간을 최대한 정확히 예측하는 장점을 가지고 있다. 하나의 작업이 끝나기 전까지는 다른 작업을 할 수 없다.
+시간과 비용을 절감과 업무의 효율성을 향상도 높다.
+
 
 ## 주로 사용되는 곳
+- 주기적으로 한꺼번에 처리할 필요가 있고, 그룹별로 분류시킬 수 있으며, 순차 접근방법을 사용할 수 있는 업무를 하는 곳에서 사용된다.
+- 즉, 유사 자료를 일정 형식으로 분류 후 일괄 처리가 가능한 곳에 적합하다.
 
-주기적으로 한꺼번에 처리할 필요가 있고, 그룹별로 분류시킬 수 있는 성질을 가지고 있으며, 순차 접근방법을 사용할 수 있는 업무를 하는 곳에서 사용된다.
-즉, 처리 요건이 일괄적인 업무에 대해 유사한 자료를 한데 모아 일정한 형식으로 분류한 뒤 한번에 일괄 처리함으로써 시간과 비용을 절감하여 업무의 효율성을 향상시킨다.
-
-초기의 일괄처리 방식은 사용자와 상호작용하는 것이 불가능했지만, 운영 체제가 발전함에 따라 프로그램 입출력을 통해 상호작용하는 것이 가능해졌다.
+초기의 일괄처리 방식은 사용자와 상호작용하는 것이 불가능했지만,  
+운영 체제가 발전함에 따라 프로그램 입출력을 통해 상호작용하는 것이 가능해졌다.
 
 
-# 멀티 프로그래밍 (Multiprogramming system)
-CPU의 효율을 극대화하려는 방법으로 여러 개의 사용자 프로그램이 마치 동시에 실행되는 것처럼 처리하는 방식
 
-CPU는 최대한 쉬는 시간 없이 사용해야 효율적이다.
-그래서 프로그램이 끝나면 다른 프로그램이 나올 때까지 기다렸는데, 기다리지 않고 바로 실행시켜서 대기시간을 최대한으로 줄이는 방법이다.
-주로 한 프로그램이 CPU를 사용 하다가 I/O 장치 등 CPU를 필요로 하지 않을 때 다른 프로그램이 CPU를 사용하게 문맥 교환을 시켜 새로운 작업을 수행하게 해 CPU의 효율을 극대화한다.
+
+# 멀티 프로그래밍 (Multiprogramming system = 다중프로그래밍)
+<span style="background-color:yellow"><b> CPU의 효율을 극대화하려는 방법으로 여러 개의 사용자 프로그램이 마치 동시에 실행되는 것처럼 처리하는 방식 </b></span>
+
+- CPU는 최대한 쉬는 시간 없이 사용해야 효율적이다.
+- 그래서 프로그램이 끝나면 다른 프로그램이 나올 때까지 기다렸는데, 기다리지 않고 바로 실행시켜서 대기시간을 최대한으로 줄이는 방법이다.
+- 주로 한 프로그램이 CPU를 사용 하다가 I/O 장치 등 CPU를 필요로 하지 않을 때 다른 프로그램이 CPU를 사용하게 문맥 교환을 시켜 새로운 작업을 수행하게 해 CPU의 효율을 극대화한다.
+
 
 ## Time-Sharing Systems
-
-다중 프로그래밍의 논리적 확장, response 시간을 줄이는 것이 중점이다.
+<b>다중 프로그래밍의 논리적 확장, response 시간을 줄이는 것이 중점이다.</b>  
 각 사용자들에게 CPU에 대한 일정시간(time slice)을 할당하여 주어진 시간 동안 직접 컴퓨터와 대화 형식으로 프로그램을 수행할 수 있도록 개발된 시스템
 
+
 ## 예제) Round Robin
-각 프로세스에 일정시간을 할당하고, 할당된 시간이 지나면 그 프로세스를 젤 뒤로 보내고, 다음 프로세스에 기회를 준다. 이렇게 돌아가며 기회를 부여하는 운영방식이다.
+각 프로세스에 일정시간을 할당하고, 할당된 시간이 지나면 그 프로세스를 젤 뒤로 보내고, 다음 프로세스에 기회를 준다.   
+돌아가며 기회를 부여하는 운영방식이다.
 
 
-## 다중 프로그래밍 시스템의 특징
--  CPU 1개, 주기억 장소 1개에 여러 개 프로그램(multi-job)을 존재시켜 다중작업을 구현시킨다.
-<img alt="success" src = "https://www.dropbox.com/s/f8qroxr75dcddhp/Screenshot%202018-11-25%2023.46.57.png?raw=1"/>
-
+## 멀티 프로그래밍 시스템의 특징
+<img alt="success" src = "/images/2018-11-25-os1/memory_structure.png"/>
+- CPU 1개, 주기억 장소 1개에 여러 개 프로그램(multi-job)을 존재시켜 다중작업을 구현시킨다.
 - 일괄 처리의 반환 시간(turn around time)이 늦으면 CPU의 유휴 시간(idle time)이 길어지므로, 여러 개의 프로그램을 동시에 기억장치에 적재시켜 유휴 시간을 줄인다.
 - 여러 개의 작업을 준비상태에 두고 관리하며, 어느 한 작업을 실행할 작업으로 장치를 선정하기 위해 기억장치 관리기법이나 CPU 스케줄링 기법 필요로 한다.
 - 스케줄링, 교착상태, 병행제어 및 보호 문제 등이 신중히 고려해야한다.
 
 
-# 다중 처리 시스템(Multiprocessing system)
-하나의 시스템에 여러 개의 프로세서(CPU)를 사용하여 다중 작업을 구현하는 것으로 목적은 컴퓨터 시스템의 처리량과 신뢰성을 향상시키는데 있다.
-다중처리 시스템은 여러 개의 프로세서가 공동 기억 장치를 통하여 메모리를 공유하며, 다중 처리기의 단일 운영체제에서 제어가 가능한 시스템
-
-<img alt="success" src = "https://www.dropbox.com/s/5pshculz47nt40r/Screenshot%202018-11-25%2023.51.07.png?raw=1"/>
 
 
-## 다중처리 시스템의 특징
+# 멀티프로세싱 시스템 (Multiprocessing system)(=다중 처리 시스템)
+<span style="background-color:yellow"><b> 여러 개의 프로세서가 공동 기억 장치를 통하여 메모리를 공유하며, 다중 처리기의 단일 운영체제에서 제어가 가능한 시스템 </b></span>
+<img alt="success" src = "/images/2018-11-25-os1/multiprocessing_system.png"/>
+
+하나의 시스템에 여러 개의 프로세서(CPU)를 사용하여 다중 작업을 구현하는 것으로 목적은 컴퓨터 시스템의 처리량과 신뢰성을 향상시키는데 있다.  
+
+
+## 멀티프로세싱 시스템의 특징
 - CPU를 여러 개 사용하여 작업 속도와 신뢰성을 높일 수 있다.
+  - TODO: 무슨 신뢰성을 높이는지 찾아봐야한다.
 - 운영 체제는 여러 CPU간의 기억장치 공유를 어떻게 지원할지 그리고 여러 CPU의 사용을 어떻게 스케줄링 할 것인가를 결정해야 한다.
 - 신뢰성과 병행계산, 최적의 연결기법, 같은 자원을 요구하는 CPU간의 경쟁을 제어하는 문제들을 고려해야 한다.
+
+
 
 
 # 실시간 시스템(Real time system)
@@ -74,10 +83,15 @@ CPU는 최대한 쉬는 시간 없이 사용해야 효율적이다.
 - 처리시간 및 비용 단축된다.
 - 자료가 무작위하게 도착하므로 입/출력 자료의 일시 저장과 대기가 필요하다.
 
-# 분산 처리 시스템(Distributed processing system)
-<span style="background-color:yellow"> <b>하나의 대형 컴퓨터에서 수행하던 기능을 통신망을 통하여 상호간에 교신하고 처리하는 방식으로 자료 처리 시스템들의 상호연결은 컴퓨터 네트워크에 의해 이루어진다. </b></span>
 
-<img alt="success" src = "https://www.dropbox.com/s/xubnr5ggmf29y3b/Screenshot%202018-11-25%2023.54.26.png?raw=1"/>
+
+
+# 분산 처리 시스템(Distributed processing system)
+<span style="background-color:yellow"> <b>하나의 대형 컴퓨터에서 수행하던 기능을 통신망을 통하여 상호간에 교신하고 처리하는 방식의 시스템 </b></span>
+
+<img alt="success" src = "/images/2018-11-25-os1/distributed_processing_system.png"/>
+- 자료 처리 시스템들의 상호연결은 컴퓨터 네트워크에 의해 이루어진다.
+
 
 #  분산처리 시스템의 목적
 - 자원 공유
