--- a/_posts/2019-01-20-2019_front.md
+++ b/_posts/2019-01-20-2019_front.md
@@ -20,7 +20,21 @@ comments: true
 - 알고리즘... 좀 풀자 ^^ 회사 적응하느라 힘든 것은 알지만 그래도 노력하자!
 - 책 하루 10분 읽기를 좀 더 신경써야 할 것 같다. 쉐도잉과 스쿼트는 습관이 어느정도 잡혔으니 책도 좀만 더 화이팅해보자.
 - 이제... KISA 것도 썼으면...
+- coverletter 초고라도 쓰자
 
 # 1월 회고
 이정도면 나름 이룬것도 많고, 맘에 든다.
 그런데 2월달에는 1월에 한 것 유지만 해도 장한 것 같다.
+
+# 2월에 이룬것
+- cake 앱으로 하루 10분 쉐도잉을 좀 더 딱 볼수 있게 했다.
+- 눔을 통해서 매일같이 식단일기를 쓰고 있고 더 체계적으로 식단관리를 하게 되었다.
+  - 환급하면 한달에 만오천원 가량이어서 할만하다.
+  - 매일 눔에서 다짐글을 고민하면서 쓰고 있어서 글쓰기 실력 높이기 목표도 이뤄가고 있는 것 같다.
+- blog about도 깔끔히 썼고, 심지어 영어로도 썼다.
+- linkedIn도 더 깔끔히 그리고 현재단계에서 거의 완성본으로 썼다.
+- 알고리즘을 easy단계로 주에 5번 풀고 있다.
+  - 욕심을 버리고 easy단계로라도 풀자로 목표를 낮췄더니 목표를 이뤘다.
+  - 그리고 java실력은 easy로도 충분히 늘릴 곳이 많다 ^^
+- 경도 비만 유지! 장하다 내자신!
+- 책을 읽는 습관이라고 말하기는 아직 부족하지만 그래도 신경쓰니 잘 읽고 있다.
