--- a/_posts/2019-02-18-os4.md
+++ b/_posts/2019-02-18-os4.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 section-type: post
-title: "Title"
-category: Algorithm
-tags: [ 'algorithm', 'python' ]
+title: "[OS 4일차]  Context Switching, user mode and kernel mode란"
+category: OS
+tags: [ 'computer_science', 'OS', '글또2기', 'process' ]
 comments: true
 ---
+
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
 잘못된 부분이 있으면 덧글을 통해서 소통을 하면 더 좋은 글로 발전이 될 수 있을 것 같습니다.
 그렇지만 소통을 할 때 서로의 감정을 존중하는 선에서 해주셨으면 좋겠습니다.
