코드블럭 깨진 것 고치기

--- a/_posts/2018-08-03-10844.md
+++ b/_posts/2018-08-03-10844.md
@@ -14,7 +14,7 @@ comments: true
 주 idea : number_of_cases[N][L] : 마지막 수가 L인 N자리 계단수를 의미한다.
 
 
-```python3
+``` python
 
 N = int(input())
 number_of_cases = [[0] * 10 for _ in range(N+1)]
@@ -34,7 +34,7 @@ for j in range(2,N+1):
 
 위에 for문을 이제 좀 더 우아하게 만들면
 
-```python3
+``` python
 for j in range(2,N+1):
     for k in range(0,10):
         if k+1 <= 9:
@@ -46,7 +46,7 @@ for j in range(2,N+1):
 
 마저 쓰면
 
-```python3
+``` python
 ans = 0
 for p in range(0,10):
     ans += number_of_cases[N][p]
