--- a/_posts/2019-03-06-tcl.md
+++ b/_posts/2019-03-06-tcl.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[DB] 트랜잭션이란?"
+title: "[DB] 트랜잭션(1편. 트랜잭션의 정의, 대상, ACID, 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)"
 category: DB
 tags: [ 'SKencar', 'db' ]
 comments: true
@@ -11,8 +11,20 @@ comments: true
 그렇지만 소통을 할 때 서로의 감정을 존중하는 선에서 해주셨으면 좋겠습니다.
 감사합니다:)
 
+*이 글은 시리즈물 입니다.*
+
 # 트랜잭션이란?
 트랜잭션은 DB의 논리적 연산단위이다.
+Transaction : (명사) 처리, 처리과정
+- 컴퓨터 과학분야에 트랜잭션은 “쪼개질 수 없는 업무처리의 단위”를 의미
+- 데이터베이스 충돌을 해결하기 위해서 둘 또는 그 이상의 데이터베이스 업데이트를 단일화된 작업 으로 처리하는 기법
+- 하나의 수정작업(update)가 실패하면 트랜젝션 상의 모든 업데이트가 실패 이전 상태로 복구
+
+<img alt="transaction_progress" src = "/images/2019-03-06-tcl/transaction_progress.png"/>
+
+
+위와 같은 경우 갑자기 어딘 가로 1,000,000원이 사라지게 된다!
+그런 경우가 일어나면 안되기 때문에 트랜젝션을 하는 것
 
 
 
@@ -25,14 +37,7 @@ comments: true
 
 
 #  트랜잭션의 특성
-- 원자성 (Atomicity)
-  - 트랜잭션에서 정의된 연산들은 모두 성공적으로 실행되던지 아니면 전혀 실행되지 않은 상태로 남아있어야 한다. ( All Or Nothing )
-- 일관성 (Consistency)
-  - 트랜잭션이 실행되기 전의 데이터베이스 내용이 잘못 되어 있지 않다면 트랜잭션이 실행된 이후에도 데이터베이스의 내용에 잘못이 있으면 안 된다.
-- 고립성 (Isolation)
-  - 트랜잭션이 실행되는 도중에 다른 트랜잭션의 영향을 받아 잘못된 결과를 만들어서는 안된다.
-- 지속성 (Durability)
-  - 트랜잭션이 성공적으로 수행되면 그 트랜잭션이 갱신한 데이커베이스의 내용은 영구적으로 저장된다.
+<img alt="ACID" src = "/images/2019-03-06-tcl/ACID.png"/>
 
 
 
@@ -98,6 +103,33 @@ ROLLBACK TO 포인트명1;
 1. DML 문장 이후에 커밋 없이 DDL 문장이 실행되면 DDL 수행 전에 자동으로 COMMIT 됩니다.
 2. 데이터베이스를 정상적으로 접속을 종료하면 자동으로 트랜잭션이 COMMIT 됩니다.
 3. 애플리케이션의 이상 종료로 데이터베이스와의 접속이 단절되었을 때는 트랜잭션이 자동으로 ROLLBACK 됩니다.
+
+
+
+
+# MySQL을 이용시
+- 스키마를 변환하기 전에 데이터베이스를 반드시 백업해 둔다.
+- MySQL은 스키마 변경에 대해 트랜잭션을 지원하지 않는다.
+- 따라서 롤백이 불가능하다.
+- 가능하다면 데이터베이스를 변환하기 이전에 프로젝트를 읽기 전용(read-only) 모드로 변경해 준다.
+- 상당히 큰 테이블의 경우 주의하지 않으면 스키마 변경에 상당한 시간이 소요된다.
+- 초 단위, 분 단위가 아니라 몇 시간이 걸릴 수도 있다.
+
+
+
+
+## MySQL 에서의 트랜잭션
+- MySQL 데이터베이스 타입에 따라서 트랜잭션 지원 여부가 달라진다. (InnoDB - 지원함, MyISAM - 지원안함)
+- 트랜잭션을 지원하지 않는다면, ATOMIC_REQUESTS 설정에 상관없이 항상 오토커밋 모드로 작동한다.
+
+
+
+
+## ORM 사용시 나올 문제
+한번에 두 프로세스 접근 하면 lock을 걸어야 하는데 그 때는 어떻게 되는가?
+
+
+
 
 ---
 참고    
