--- a/_posts/2019-03-06-tcl.md
+++ b/_posts/2019-03-06-tcl.md
@@ -11,7 +11,17 @@ comments: true
 그렇지만 소통을 할 때 서로의 감정을 존중하는 선에서 해주셨으면 좋겠습니다.
 감사합니다:)
 
+
+---
+
+
 *이 글은 시리즈물 입니다.*
+[1편 [DB] 트랜잭션(1편. 트랜잭션의 정의, 대상, ACID, 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)] https://joosjuliet.github.io/tcl/  
+[2편 [DB] 트랜잭션(2편. jpa에서 transaction이란)] https://joosjuliet.github.io/jpa_transaction/  
+
+
+---
+
 
 # 트랜잭션이란?
 트랜잭션은 DB의 논리적 연산단위이다.
