--- a/_posts/2019-03-06-tcl.md
+++ b/_posts/2019-03-06-tcl.md
@@ -40,7 +40,7 @@ Transaction : (명사) 처리, 처리과정
 
 
 #  트랜잭션 대상
-- SQL 문은 UPDATE, INSERT, DELETE 등 데이터를 수정하는 DML 문 입니다.
+- SQL 문은 UPDATE, INSERT, DELETE 등 데이터를 수정하는 *DML 문*
 - SELECT 문장은 직접적인 트랜잭션 대상은 아니지만, SELECT FOR UPDATE 등 배타적 LOCK 을 요구하는 문장은 트랜잭션 대상이 될 수 있습니다.
 
 
@@ -96,7 +96,7 @@ Transaction : (명사) 처리, 처리과정
 
 ## SAVEPOINT
 저장점을 정의하면 롤백할 때 트랜잭션에 포함된 전체 작업을 롤백하는 것이 아니라 현 시점에서 SAVEPOINT 까지 트랜잭션의 일부만 롤백 가능
-복수의 저장점을 정의할 수 있으며, 동일이름으로 저장점을 정의했을 때는 나중에 정의한 저장점이 유요
+복수의 저장점을 정의할 수 있으며, 동일이름으로 저장점을 정의했을 때는 나중에 정의한 저장점이 유효
 
 
 
@@ -110,7 +110,7 @@ ROLLBACK TO 포인트명1;
 저장점 지정 없이 ROLLBACK 을 실행했을 경우 모든 변경사항을 취소합니다.
 
 좀더 깊게 생각하면 아래와 같습니다.
-1. DML 문장 이후에 커밋 없이 DDL 문장이 실행되면 DDL 수행 전에 자동으로 COMMIT 됩니다.
+1. *DML 문장* 이후에 커밋 없이 DDL 문장이 실행되면 DDL 수행 전에 자동으로 COMMIT 됩니다.
 2. 데이터베이스를 정상적으로 접속을 종료하면 자동으로 트랜잭션이 COMMIT 됩니다.
 3. 애플리케이션의 이상 종료로 데이터베이스와의 접속이 단절되었을 때는 트랜잭션이 자동으로 ROLLBACK 됩니다.
 
