제목바꾸고 tag달기

--- a/_posts/2019-03-20-artifact.md
+++ b/_posts/2019-03-20-artifact.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[java 환경설정으로 얻은 지식들] Applet이란? Jar파일이란?, Artifact란? "
+title: "[legacy 환경설정으로 얻은 지식들] Applet이란? Jar파일이란?, Artifact란? "
 category: Spring
-tags: [ 'Spring', '환경설정' ]
+tags: [ 'Spring', '환경설정', 'SKencar' ]
 comments: true
 ---
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
