sort 틀린것 고치기 merge sort만들기

--- a/_posts/2018-10-31-sort.md
+++ b/_posts/2018-10-31-sort.md
@@ -81,7 +81,7 @@ pivot 기준 작으면 왼쪽 크면 오른쪽
 2. 기준 작으면 왼, 크면 오
 3. 정렬 될때까지 왼,오 나누어 분할
 
-# Time Sort
+# Tim Sort
 > O(NlogN)
 
 python에서 쓰는 sort는 time sort이다.
