entity 정보 update

--- a/_posts/2019-01-29-entity.md
+++ b/_posts/2019-01-29-entity.md
@@ -13,6 +13,14 @@ comments: true
 - JPA를 사용한 database에서 특정 object를 저장하기 위해서 우리는 entity class를 저장해야한다.
 - 개념적으로 이는 serialize class와 비슷하며, serialize할 수 있는 능력이 있다는 것을 보여준다.
 
+
+- 한 table을 가지고 여러 entity를 만들 수 있다.
+  - student table에 id,name,gender,class column이 있다.
+  - 이걸 가지고 두가지 entity를 만들 수 있다.
+    - studentClass entity (변수는 name, class)
+    - studentGencer entity (변수는 id, name, gender)
+
+
 # 제약조건
 - 반드시 no-arg(파라미터가 없는)생성자를 가지고 있어야합니다.
   - 파라미터가 있는 생성자를 가지고 있어도 되지만, 이 경우 반드시 public혹은 protected의 접근자를 가진 no-arg생성자를 선언해주어야 합니다.
