올려야되는 것 올리기

--- a/_posts/2019-01-20-2019_front.md
+++ b/_posts/2019-01-20-2019_front.md
@@ -53,3 +53,63 @@ comments: true
 - spring을 알아가는데 더 집중하자! (잘하고 있지만 유지하는데 집중하자)
 - algorithm 힘든 건 알지만 일주일에 두개 medium을 풀어보자
 - 회사 confluence에 쓴 것 블로그에도 올리자
+
+# 3,4월에 회고
+- coverletter 초고 완료ㅎㅎㅎㅎㅎ
+- resume 다시 썼다. 커리어 관리 열심히 하다니 ㅎㅎㅎㅎㅎㅎㅎ
+- 나름 바쁘기도 하고 아프기도 한 와중에 spring 꾸준히 스터디와 강의를 들었다 ;ㅅ;
+  - 백기선님의 강의가 많은 도움이 되었다.
+  - 나름 슬랙에서 답변까지 할 수 있는 실력이 좀 되었다.
+- algorithm 일주일에 두개는 풀고 있다.
+- 6시 일어나기 습관은 완벽히 됬다. 나자신에게 장하다. 챌린저스 앱이 많은 도움을 줬다.
+- 하루 만보를 거의 챙기고 있다. (소름)
+
+# 5월에 신경 쓸 것
+- 일단 4월까지 했던 모든 것들을 정리하고 복습해야겠다.
+- 4월까지 공부는 많이 했는데 바빠서 다시 못보니 .... 사라져간다 ~~안돼~~
+  - 스프링 튜토리얼 한번 만들어야겠다.
+  - 그동안 점심스터디 한 것, 일요스터디 한 것 모두 블로그에 올려야겟따.
+
+
+# 1월부터 4월 초까지 총 쿼터 상반기 회고!
+## 1. 개발글의 퀄리티를 높이자!
+1월달과 비교하면 뭐... 내가 생각해도 엄청나다 ^^^^^^^^  
+나름 퀄리티를 높이기 위해 책을 최대한 시간나는 대로 읽었다. 그게 많은 도움이 많이 됬다.  
+os글을 써야 하는데... 그건 하반기 목표를 해야겠다.  
+
+
+## 2. 알고리즘!  
+가장 망한 것....^^  
+구글 킥스타트... 1문제도 못풀고 광탈해서 개슬펐다 ....... 눈물.....  
+그래도 회사다니면서 하루 한문제 풀려는 습관을 잡아가고 있다.  
+상반기 목표인 2문제 꼭 상반기 안에 풀 수 있기를!!!
+
+
+## 3. 지속적으로 커리어 관리하자!
+... 아주 제일 잘하고 있다.
+resume도 두번이나 고치고, 나름 미국회사랑 인턴시험도 진행하고...  
+코테까지 다보고 나서 비자때문에 안된다고 메일을 받았지만,  
+그래도 비자만 있었음, 그 회사 들어갈 수 있었던 거니까 ^^^^^*  
+커리어 관리가 꽤 잘 되고 있는 것 같다(나름)
+그래도 지금 회사에서 한 것도 잘 resume에 넣어야겠따.  
+
+
+# 4. 하루 10분 쉐도잉과 하루 100개 스쿼트
+이건 거의 시작하자마자 경도 비만으로 갔닼ㅋㅋㅋㅋㅋㅋㅋ  
+나자신 장해... 계속 몸이 좋아지고 있다. 더 좋아져야 하지만!
+쉐도잉은 잘하고 있다. 근데 스쿼트는 그렇게 잘 되고 있지는 못했다.
+그래도 꾸준히 운동을 잘 하고 있긴 하다. 거기다가 이것과 더불어 새벽 6시까지 잘지키고 있닼ㅋㅋㅋㅋㅋㅋㅋ
+목표로 세우지도 않았는데 잘 해내니까 뿌듯하니까 ㅋㅋㅋㅋㅋㅋㅋㅋㅋ  
+
+
+# 5. 식습관 개선 및 멘탈관리
+책은 읽는 건 습관이 된 것 같다. 못 읽는 날도 많지만 최대한 읽고 있다.
+책 읽는데 다시 취미가 붙어서 행복하다.
+
+멘탈은 그래도 정신적으로 극한상황인데 너무 밑으로 내려가지 않으니, 이정도면 꽤 성공인 것 같다.
+후... ^^
+
+
+# 6. 운전면허 따기
+... 응 답없어
+언젠간 따겠지... 하반기로 미룬다..
