--- a/_posts/2019-04-20-geek.md
+++ b/_posts/2019-04-20-geek.md
@@ -13,6 +13,11 @@ comments: true
 
 ---
 
+<img alt="traffic" src = "/images/2019-04-20-geek/traffic.png"/>
+그렇게 많은 traffic은 아니지만!  
+계속 파도를 쳤지만!  
+그래도 나는 6개월간 성장한 것은 맞는 것 같다!  
+
 
 # 나름 고인물
 1기부터 해왔는데 그때는 패스도 두번정도 쓰고, 몇번 씩 블로그도 바꾸고,  
