... 많은 것들 업데이트 하기

--- a/_posts/2019-01-29-entity.md
+++ b/_posts/2019-01-29-entity.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "JPA에서 Entity란?"
+title: "JPA에서 Entity란?(feat. pojo)"
 category: Spring
 tags: [ 'Spring', 'Java', 'SKEncar', 'JPA' ]
 comments: true
@@ -32,6 +32,35 @@ comments: true
 - 엔티티 클래스는 final이어서는 안됩니다.
   - 메소드가 없거나 영속성 필드가 없는 경우에는 final으로 선언해도 됩니다
 
+# POJO(Plain Old Java Object)
+
+``` java
+public class SimpleBean {
+    private String name;
+    private String age;
+
+    public void setName(String name) {
+        this.name = name;
+    }
+    public String getName() {
+        return this.name;
+    }
+
+    public void setAge(String age) {
+        this.age = age;
+    }
+    public String getAge() {
+        return this.age;
+    }
+}
+```
+
+그냥 get set만 있는 빈 java 객체이다.
+그렇다면 POJO가 중요한 이유는?
+
+그것은 클래스 상속을 강제하지 않고, 인터페이스 구현을 강제하지 않으며, 애노테이션 사용을 강제하지 않는다.
+즉 개발자는 특정한 라이브러리나 컨테이너의 기술에 종속적이지 않고, 가장 일반적인 형태로 코드를 작성할 수 있다는 것이다.
+이것은 생산성에도 유리하고, 코드에 대한 테스트 작업 역시 좀 더 유연하게 할 수 있다는 장점이 생긴다.
 
 
 
