--- a/_posts/2019-04-28-f8.md
+++ b/_posts/2019-04-28-f8.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "Title"
+title: "F8 후기(feat. 생존기)"
 category: Algorithm
 tags: [ 'algorithm', 'python' ]
 comments: true
@@ -12,33 +12,96 @@ comments: true
 감사합니다:)
 
 ---
-후기라 쓰고 생존기라 읽는다.
-일단 정말 다사다난하게 겨우겨우 도착했다.
 
-가방이 없어져 옷도 없어 정말 sanfrancisco의 흔한 homeless같아 졌다.
-후 ^^^
+# 1. 얻은 것
+## 다양한 실리콘밸리 개발자 만나기.
+가방이 늦게와서(...) 편한 개발자 옷으로 돌아다녔기에 얻은 것은
+행사장 밖에서도 많은 개발자과 대화한 것이었다.
 
-뭐 그래도 괜찮았다. 이렇게 후기 어그로를 끌 수 있으니까
-나름 옷이 너무 편한 개발자옷이기에 amp 개발자도 만나고 좋았따.
+원래 한국에서든 외국에서든 말이 잘걸리는 타입인데, 이렇게 특정 직종에 해당된 사람에게 많이 걸리다닠ㅋㅋㅋㅋ
+공항 입국심사할 때 구글 AMP 개발자랑 개발 얘기할 때는 너무 황홀해서 일찍 나갈 수 있는데도 그냥 함께 기다렸다^^*
 
 
-어쨌든, 와서 첫째날은 자고 끝나고
-둘째날은 starbucks에서 열심히 개발했다.
-회사는 remote근무가 안되서 뭐 어찌보면 개꿀됬고, 열심히 해커톤 준비를 했다.
-어차피 외국인과 팀짜서 하는것 진짜 조금이라도 더 이사람들과 작업을 하고 싶었다.(욕망의 항아리)
 
-일단 난 여러번의 hackerthon으로 뭐든 맞춰줄 자신이 있었기에(근거 없는 자신감)
-그들이 원하는 stack으로 다 맞춰줬따.
 
-그래서 MongoDB에 mongoose를 쓰게 됬다. 예전 해커톤 때 써번 스택이여서 뭐 ㅎㅎㅎ
-그때도 1시간 보고 짰는데 이번에도 ㅎㅎㅎㅎㅎ (그 때 코드를 github에서 지운게 피눈물이 났다.)
+## 외국과 한국의 개발 차이점?
+가장 큰 차이점
+- 사내 툴
+- 최고의 배포환경
 
-그리고 hf도 처음봤따. hubflow라고 github에서 gitflow를 도와주는 것이었다.
-이미 gitflow를 사용해봐서 뭐 근데 좀 편하긴 했는데 왜 굳이...? 라는 생각과
-그냥 직접하는게 더 좋았다.(~~왜냐면 나는 허술해서 단계를 생략하는게 그렇게 좋은 사람이 아니다.~~)
+*
+그 회사에 맞는 사내 툴들, 및 사내 개발자들을 위한 프로젝트들을 쓰는 걸 보면서 너무 부러웠다.
+그리고 그나라 사람들은 욕하지만 확실히 코딩에 집중할 수 있게, 배포환경이 잘 갖춰져 있다고 한다.
+서버 바꾸고 그런것도 6개중 한개만 바꿔서 테스트 할 수 있고 그런게 너무나도 손 쉽게 된다고 한다.
 
-그리고 일단 도착한 날 열심히 코딩했는데
-~~뭔가 느낌이 한국과 똑같았다.~~
 
-한국에서도 스벅에서 열코딩... 여기서도 열코딩...^^
-개발자의 삶이란
+*
+그 외에는 어디든 뭐 똑같았다.
+다들 레거시 극복에 힘이 들어하고, 테스트 코드는 귀찮지만 하고, MSA의 골치아픔 역시...
+~~후 같은 나라인줄~~
+
+
+
+
+## 언제나 외국진출의 꿈을 갖기
+- young and rich
+- 초기비용 엄청나다.
+- 그치만 불가능은 아니다.
+
+*
+난 외국에 원서를 넣었는데 중간에 탈락한 적도 있다.
+근데 그당시 한 10개정도 넣었나 그랬는데... 진출 성공하신 분들은 기본 100개 썼다드라
+*
+초기 비용 역시 3천이면 넉넉하겠지 했는데... ... ...
+*
+youtube로 소통하던 분이 있었는데
+느낌이 이상했따.... 친한느낌이 들어서... 이상했다.
+막 반가운데 이분은 날 처음보잖아 ? 친해서 막 묻고 싶은데... 이게 사실 이분은 날 처음보잖아?
+이런 생각이 너무 들어서... 정신이 좀 이상했닼ㅋㅋㅋㅋㅋㅋㅋ
+근데 좀 곤란한 질문도 다 잘 대답해 주셨다.
+후.. 죄송합니다. 밥이라도 사드렸어야 했던 것 같다.
+정말 끝나고 비실비실 나왔다.
+
+*
+이번생에 메이저리그 한번 가고싶다.
+
+
+
+
+## 오랜만에 노드
+일단 난 어쩌다 보니 노드, 장고, spring 모두로 일을 한 경험이 있어서 뭐든 맞춰줄 자신이 있었다.(근거 없는 자신감)
+그래서 진짜 팀이 원하는 stack으로 다 맞춰줬따.
+
+그래서 MongoDB에 mongoose를 쓰게 됬다. 그리고 일단 도착한 날부터 열심히 코딩했는데
+~~한국에서도 스벅 여기서도 스벅~~
+
+확실히 내서비스 따로 만드는게 재미있었다.
+오랜만에 느낀 즐거움
+
+# 2. 생존기
+후기라 쓰고 생존기라 읽게 된 이유가 있다.
+일단 정말 다사다난하게 겨우겨우 도착했다^^.
+
+## 첫번째 중국 베이징에 도착해서 경유
+나름 경유 경험도 많아서 사실 전혀 안쫄았다.
+
+그러나... 일단 중국 베이징에 도착해서 경유를 해야하는데...
+중국 공항직원분들이 고우 스트레이트 turn right조차 안될줄이야...
+
+그치만 중국분들은 정말 진짜 친절했다.
+여러나라 승객들도 힘을 합쳐 도와주고 ... 정을 많이 느꼈다.
+다함께 힘을 합쳐 "이친구 어떻게든 미국행 비행기 태울거야 ㅠㅠ"
+하는 마음이 느껴졌다.
+
+그리고 특히 한국인들도 온힘을 다해서 도와주셨다 ㅠㅠㅠㅠ
+세상 아주 따듯합니다.
+
+## 가방이 없어졌다.
+후.. 센프란에 왔는데 내 가방이 비행기를 못타서 다음날 저녁에나 도착한다고 했다.
+여행 경력 나름 20년 가까운데 이건 진짜 처음이었다^^*
+
+그 다음날부터 사람들을 만났는데 정말 sanfrancisco의 흔한 homeless 스타일로 만났다.
+후.. 부끄러웠따...^^*
+그치만 그덕에 쉽게 나를 내려놓을 수 있었다(?)
+뭐... 나 원래 이게 내 얼굴이야(?)
+심지어 homeless 스타일... 회사갈 때 스타일이어서 더 위풍당당 (?)
