--- a/_posts/2019-03-17-servlet.md
+++ b/_posts/2019-03-17-servlet.md
@@ -12,8 +12,7 @@ comments: true
 감사합니다:)
 
 # servlet이란?
-웹프로그래밍에서 클라이언트의 요청을 처리하고 그 결과를 다시 클라이언트에게
-전송하는 Servlet 클래스의 구현 규칙을 지킨 자바 프로그래밍 기술
+웹프로그래밍에서 클라이언트의 요청을 처리하고 그 결과를 다시 클라이언트에게 전송하는 Servlet 클래스의 구현 규칙을 지킨 자바 프로그래밍 기술
 
 
 # 서블릿 컨테이너란?
