일단 올리고... 집에서 한다.

--- a/_posts/2019-02-27-cors.md
+++ b/_posts/2019-02-27-cors.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "Title"
-category: Algorithm
-tags: [ 'algorithm', 'python' ]
+title: "CORS(Cross-Origin-Resource Sharing)란?"
+category: Network
+tags: [ 'CORS', 'Cross-Origin-Resource_Sharing', 'API', 'Security' ]
 comments: true
 ---
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
