img 주소 바꾸기

--- a/_posts/2019-01-15-os3.md
+++ b/_posts/2019-01-15-os3.md
@@ -8,21 +8,28 @@ comments: true
 ---
 
 # Linux Run-time Memory Image
+<img alt="memory image" src = "/images/2019-01-15-os3/memory.png"/>
 
-[!memory image](/images/2019-01-15-os3/memory.png)
 # Concurrent Processes and Logical Control Flows
 각각의 process들은 그들만의 logical control flow가 있다.
 
 ## Concurrent Process
 - 프로세스들은 동시에 실행이 뒬 수 있다.
-[!physical running](/images/2019-01-15-os3/physical_running.png)
+<img alt="physical running" src = "/images/2019-01-15-os3/physical_running.png"/>
+<img alt="parallelism" src = "/images/2019-01-15-os3/concurrency.png"/>
+
 
 ## Logical Control Flows
-[!logical running](/images/2019-01-15-os3/logical_running.png)
+<img alt="logical running" src = "/images/2019-01-15-os3/logical_running.png"/>
+
 
 # Parallel Process
 - multiprocessing중 하나이며 두개 이상의 processor들이 조화를 이룰 때 일어나느 상황이다.
 - 많은 CPU들이
+
+<img alt="parallelism" src = "/images/2019-01-15-os3/parallelism.png"/>
+
+
 
 # Context Switching
 
