jpa 좋은 블로그

--- a/_posts/2019-04-24-good_blog.md
+++ b/_posts/2019-04-24-good_blog.md
@@ -19,3 +19,7 @@ https://gmlwjd9405.github.io/page6/
 
 스프링 강의 열심히 들으셔서 정리하시는 분:
 https://jojoldu.tistory.com/28
+
+
+JPA:
+https://coding-start.tistory.com/79?category=781616
