--- a/_posts/2018-08-18-1463.md
+++ b/_posts/2018-08-18-1463.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1463번 : 1로 만들기 with python3"
+title: "[백준] 1463번 : 1로 만들기 with python3, java"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
@@ -10,7 +10,7 @@ comments: true
 문제 :
 https://www.acmicpc.net/problem/1463
 
-```pyrhon3
+``` python
 n = int(input())
 d = [0]*(n+1)
 
@@ -54,3 +54,29 @@ sys.setrecursionlimit(1000011)
 
 https://joosjuliet.github.io/tail_recursion/
 여기있다.
+
+
+``` java
+
+public class Main {
+    static Scanner s = new Scanner(System.in);
+    static int[] D = new int[1000001];
+    public static void main(String[] args) {
+        int n = s.nextInt();
+        D[1] = 0;
+
+        for (int i = 2; i <= 1000000; ++i) {
+            D[i] = D[i - 1]+1;
+
+            if (i % 3 == 0 && D[i] > D[i/3] ) {
+                D[i] = D[i/3] + 1;
+            }else if (i % 2 == 0&& D[i] > D[i/2] ) {
+                D[i] = D[i/2] + 1;
+            }
+
+        }
+
+        System.out.println(D[n]);
+    }
+}
+```
