--- a/_posts/2018-08-22-11727.md
+++ b/_posts/2018-08-22-11727.md
@@ -1,15 +1,37 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11727번 : 2×n 타일링 2 with python3"
+title: "[백준] 11727번 : 2×n 타일링 2 with python3, java"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 
-https://www.acmicpc.net/problem/11726
 
-```python3
+문제 : https://www.acmicpc.net/problem/11727  
+
+# 목표:
+- 2×n 직사각형을 2×1과 2×2 타일로 채우는 방법의 수를 10,007로 나눈 나머지를 출력
+
+# 조건:
+- 1 ≤ n ≤ 1,000
+- O(N**3)가능
+
+# solution 설명 :
+- **세로의 값이 1일 때** 경우의 수는 1x2: 1개 -> d[1]
+- **세로의 값이 2일 때** 1에서 온 것 한개, 가로로 두개가 눕혀 있는 것과 2x2 짜리 하나: 2개 -> d[2]
+  - 이건 추가되는 경우의 수를 말하는 것이다.
+  - d[1]에서 가로로 서있는 것 하나 가져오기 때문에 *d[2]의 값은 3* 이다.
+- **세로의 값이 3일 때** d[1]과 d[2]에서 가져와서 하나씩 붙이는 것이다.
+  - d[3]일 때 d[1]이 두배로 붙는 것이다.
+  - 2x2 가 와서 만들 수도 가로로 두개가 눕혀 있는 것의 경우의 수!
+  - 그리고 d[2]에서는 숫자가 세로로 긴 것 하나 추가이니 그냥 더하기만 하는 것이다.
+- 계속간다.
+
+
+
+
+``` python
 N = int(input())
 d = [0] * (N+1)
 
@@ -19,4 +41,23 @@ for i in range(3, N+1):
     tmp = d[i-1] + 2 * d[i-2]
     d[i] = tmp % 10007
 print(d[N]% 10007)
+```
+
+
+``` java
+import java.util.*;
+
+public class Main{
+	public static void main(String[] args){
+		Scanner sc=new Scanner(System.in);
+		int n = sc.nextInt(), a, b=1, res=1;
+
+		for(int i=0;i<n-1;i++){
+			a=b;
+			b=res;
+			res=(2*a+b)%10007;
+		}
+		System.out.println(res);
+	}
+}
 ```
