--- a/_posts/2018-08-22-9095.md
+++ b/_posts/2018-08-22-9095.md
@@ -1,15 +1,24 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 9095번 : 1, 2, 3 더하기 with python3"
+title: "[백준] 9095번 : 1, 2, 3 더하기 with python, java"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
+문제 : https://www.acmicpc.net/problem/9095  
 
-https://www.acmicpc.net/problem/9095
+# 목표:
+-  n을 1, 2, 3의 합으로 나타내는 방법의 수를 구하는 수 출력
 
-```python3
+# 조건:
+
+# solution 설명 :
+- d 에는 i를 1,2,3으로 만들 수 있는 가지 수를 저장한다.
+
+
+
+``` python
 N = int(input())
 count = [ int(input()) for _ in range(N)]
 d = [0] * (max(count)+1)
@@ -24,4 +33,28 @@ for i in count:
     print(solving(i))
 
 ```
-d 에는 i를 1,2,3으로 만들 수 있는 가지 수를 저장한다.
+
+``` java
+import java.util.*;
+import java.math.*;
+
+public class Main {
+    public static void main(String args[]) {
+        Scanner sc = new Scanner(System.in);
+        int[] d = new int[11];
+        d[0] = 1;
+        for (int i=1; i<=10; i++) {
+            for (int j=1; j<=3; j++) {
+                if (i-j >= 0) {
+                    d[i] += d[i-j];
+                }
+            }
+        }
+        int t = sc.nextInt();
+        while (t-- > 0) {
+            int n = sc.nextInt();
+            System.out.println(d[n]);
+        }
+    }
+}
+```
