초본 글 올리기

--- a/_posts/2019-03-17-servlet.md
+++ b/_posts/2019-03-17-servlet.md
@@ -40,4 +40,34 @@ https://mangkyu.tistory.com/8?category=761303
 
 
 
+
+
+
+
+Servlet Container는 Servlet 저장소라고 봐도 무방하다. Java로 웹을 개발하기 위해 여러 Servlet들이 필요하게 되는데, 이러한 Servlet들의 Life Cycle (생명주기) 관리, 멀티쓰레드 지원 등을 하고 있는 것이 Servlet Container이다.
+
+우리가 알고 있는 대표적인 Servlet Container가 Tomcat
+
+Spring MVC 역시 Servlet Container가 관리하고 있는 Servlet이다.
+그래서 Servlet 없이 Spring MVC만 있으면 된다고 하는것은 비지니스 로직을 Spring을 통해 처리하겠다는것이지 Servlet이 필요없다는 얘기가 아니다.
+
+Spring MVC로의 모든 요청과 응답은 DispatcherServlet이 관리하고 있다.
+
+URL요청이 오면 이를 가로채서 HandlerMapping (@RequestMapping으로 봐도 무방) 에게 해당 요청을 처리할 수 있는 Controller를 찾아내어 요청을 Controller에게 보내고 결과값을 리턴
+
+<img alt="success" src = "/images/2019-03-17-servlet/web_server-user.png"/>
+
+
+
+
+<img alt="success" src = "/images/2019-03-17-servlet/ioc_container.png"/>
+
+
+POJO와 설정(Configuration Metadata)을 Spring이 제공하는 Container(DI Container == IoC Container)에 주입시키면 Bean으로 등록되고 사용이 가능하다는 얘기
+
+(Spring Framework를 사용한다고 해서 본인이 만든 모든 Class들이 Bean으로 자동 등록되는 것은 아니다)
+
+
+
+
 https://ko.wikipedia.org/wiki/%EC%95%84%ED%8C%8C%EC%B9%98_%ED%86%B0%EC%BA%A3
