--- a/_posts/2019-03-06-tcl.md
+++ b/_posts/2019-03-06-tcl.md
@@ -1,29 +1,27 @@
 ---
 layout: post
 section-type: post
-title: "[DB] 트랜잭션(1편. 트랜잭션의 정의, 대상, ACID, 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)"
+title: "[2편] DB에서의 트랜잭션( 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)"
 category: DB
-tags: [ 'SKencar', 'db' ]
+tags: [ 'transaction', 'db' ]
 comments: true
 ---
 제 블로그의 모든 글은 IMHO로 쓴 것입니다.
 잘못된 부분이 있으면 덧글을 통해서 소통을 하면 더 좋은 글로 발전이 될 수 있을 것 같습니다.
 그렇지만 소통을 할 때 서로의 감정을 존중하는 선에서 해주셨으면 좋겠습니다.
 감사합니다:)
-
-
 ---
-
-
 *이 글은 시리즈물 입니다.*
-[1편 [DB] 트랜잭션(1편. 트랜잭션의 정의, 대상, ACID, 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)] https://joosjuliet.github.io/tcl/  
-[2편 [DB] 트랜잭션(2편. jpa에서 transaction이란)] https://joosjuliet.github.io/jpa_transaction/  
-
-
+- [1편] 트랜잭션 (트랜잭션의 정의, 대상, ACID)
+  - https://joosjuliet.github.io/transaction/  
+- [2편] DB에서의 트랜잭션( 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)
+  - https://joosjuliet.github.io/tcl/
+- [3편] SPRING에서의 트랜잭션(jpa에서 transaction이란)
+  - https://joosjuliet.github.io/jpa_transaction/  
 ---
 
 
-# 트랜잭션이란?
+# DB에서의 트랜잭션이란?
 트랜잭션은 DB의 논리적 연산단위이다.
 Transaction : (명사) 처리, 처리과정
 - 컴퓨터 과학분야에 트랜잭션은 “쪼개질 수 없는 업무처리의 단위”를 의미
