insertion sort 추가

--- a/_posts/2018-10-24-tim_sort.md
+++ b/_posts/2018-10-24-tim_sort.md
@@ -1,12 +1,28 @@
 ---
 layout: post
 section-type: post
-title: "(작성중) [python] python의 기본 sort tim_sort란!"
+title: "[sort 시리즈 번외편](작성중) [python] python의 기본 sort tim_sort란!"
 categories: Python
 tags: [ 'Python3', 'tim_sort', 'python' ]
 comments: true
 ---
+이 컨텐츠는 시리즈물입니다.  
 
+- [sort 시리즈 intro]
+  - sorting algorithm (with. python3)
+    - https://joosjuliet.github.io/sort/
+
+- [sort 시리즈]
+  - [sort 시리즈 1탄] [merge sort] sort algorithm with python3
+    - https://joosjuliet.github.io/merge_sort/
+  - [sort 시리즈 2탄] 삽입정렬(insertion sort) with python3
+    - https://joosjuliet.github.io/insertion_sort/
+
+- [sort 시리즈 번외편]
+  - [python] python의 기본 sort tim_sort란!
+    - https://joosjuliet.github.io/tim_sort/
+
+---
 python에서 sort는 기본적으로 stable sort이다.
 stable sort는 들어온 순대로 sort된다.
 
