--- a/_posts/2018-10-31-sort.md
+++ b/_posts/2018-10-31-sort.md
@@ -1,10 +1,28 @@
 ---
 layout: post
 section-type: post
-title: "[ 작성중 ] sorting algorithm (with. python3)"
+title: "[sort 시리즈 intro][ 작성중 ] sorting algorithm (with. python3)"
 categories: Computer_Science
 tags: [ 'computer_science' ]
 comments: true
+---
+
+이 컨텐츠는 시리즈물입니다.  
+
+- [sort 시리즈 intro]
+  - sorting algorithm (with. python3)
+    - https://joosjuliet.github.io/sort/
+
+- [sort 시리즈]
+  - [sort 시리즈 1탄] [merge sort] sort algorithm with python3
+    - https://joosjuliet.github.io/merge_sort/
+  - [sort 시리즈 2탄] 삽입정렬(insertion sort) with python3
+    - https://joosjuliet.github.io/insertion_sort/
+
+- [sort 시리즈 번외편]
+  - [python] python의 기본 sort tim_sort란!
+    - https://joosjuliet.github.io/tim_sort/
+
 ---
 
 # 알고리즘을 시각화 해서 보여주는 tool
@@ -87,7 +105,7 @@ pivot 기준 작으면 왼쪽 크면 오른쪽
 python에서 쓰는 sort는 time sort이다.
 quick sort를 안쓰는 이유는 정렬 됬을 시 time complexity가 높을 가능성 때문이다.
 그래서 big O의 성능이 평균적으로 좋은 O(NlogN)을 사용한다.
-(작성중)https://joosjuliet.github.io/time_sort/
+(작성중)https://joosjuliet.github.io/tim_sort/
 *작성중이지만 일단 따로 포스팅을 해놨다*
 
 
