9095 설명 업데이트

--- a/_posts/2018-08-22-9095.md
+++ b/_posts/2018-08-22-9095.md
@@ -11,11 +11,22 @@ comments: true
 # 목표:
 -  n을 1, 2, 3의 합으로 나타내는 방법의 수를 구하는 수 출력
 
+
 # 조건:
+- 합을 나타낼 때는 수는 한개여도 상관없다.
+  - 4
+    - 1+1+1+1
+- 위치가 다르면 들어간 숫자가 같아도 다른 경우의 수다.
+  - 4 (모두 다른 경우의 수)
+    - 1+1+2
+    - 1+2+1
+    - 2+1+1
 
 # solution 설명 :
-- d 에는 i를 1,2,3으로 만들 수 있는 가지 수를 저장한다.
-
+- O(N)
+- dp를 사용
+- arr의 index(i)는 i를 구성하는 경우의 수다.
+- arr[i]에는 arr[i-1], arr[i-2], arr[i-3]의 경우의 수를 더한 값을 넣는다.
 
 
 ``` python
