datastore과 n+1내용추가

--- a/_posts/2019-07-23-n+1.md
+++ b/_posts/2019-07-23-n+1.md
@@ -19,7 +19,7 @@ comments: true
 그래서 spring버전 django 버전 모두 일단 정리해보기로 했다.  
 
 
-
+<!-- todo https://meetup.toast.com/posts/87을 보고 좀 더 추가해야한다-->
 
 # 2. N+1
 ## N+1이 일어나는 이유
