--- a/_posts/2019-03-06-tcl.md
+++ b/_posts/2019-03-06-tcl.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[2편] DB에서의 트랜잭션( 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)"
+title: "(작성중)[2편] DB에서의 트랜잭션( 제어어(TCL)[COMMIT, ROLLBACK, SAVEPOINT], mysql에서의 트랜잭션)"
 category: DB
 tags: [ 'transaction', 'db' ]
 comments: true
@@ -24,12 +24,8 @@ comments: true
 # DB에서의 트랜잭션이란?
 트랜잭션은 DB의 논리적 연산단위이다.
 Transaction : (명사) 처리, 처리과정
-- 컴퓨터 과학분야에 트랜잭션은 “쪼개질 수 없는 업무처리의 단위”를 의미
-- 데이터베이스 충돌을 해결하기 위해서 둘 또는 그 이상의 데이터베이스 업데이트를 단일화된 작업 으로 처리하는 기법
-- 하나의 수정작업(update)가 실패하면 트랜젝션 상의 모든 업데이트가 실패 이전 상태로 복구
 
 <img alt="transaction_progress" src = "/images/2019-03-06-tcl/transaction_progress.png"/>
-
 
 위와 같은 경우 갑자기 어딘 가로 1,000,000원이 사라지게 된다!
 그런 경우가 일어나면 안되기 때문에 트랜젝션을 하는 것
