10844, 11724에 목표, 조건, solution 설명 넣기

--- a/_posts/2018-08-03-10844.md
+++ b/_posts/2018-08-03-10844.md
@@ -10,8 +10,19 @@ comments: true
 
 문제링크 : https://www.acmicpc.net/problem/10844
 
+# 목표:
+- 바로 옆에 있는 수들의 차이는 1
+- 길이가 주어졌을 때 그런 수열들의 개수 구함
 
-주 idea : number_of_cases[N][L] : 마지막 수가 L인 N자리 계단수를 의미한다.
+# 조건:
+- 첫 숫자는 0이 될 수 없음.
+- N은 1보다 크거나 같고, 100보다 작거나 같은 자연수
+
+
+# solution 설명 :
+- 주 idea
+  - number_of_cases[N][L] : 마지막 수가 L인 N자리 계단수를 의미한다.
+- 1. 값 넣어논다.
 
 
 ``` python
@@ -52,6 +63,4 @@ for p in range(0,10):
     ans += number_of_cases[N][p]
 print(ans%1000000000)
 ```
-마지막에 ans에 반드시 %1000000000해줘야합니다...
-매번 number_of_cases[j][k] 넣을 때 나머지 구했다고 뒤에서 안하면... 틀리다고 나옵니다.
-시간차 두고 이번이 세번째 풀었는데... 세번 다 그것 실수로 삽질을 한 것 같아요...(바보)
+마지막에 ans에 반드시 %1000000000해줘야한다.
