1707 bfs solution도 만들어보기

--- a/_posts/2018-08-03-10844.md
+++ b/_posts/2018-08-03-10844.md
@@ -22,7 +22,7 @@ comments: true
 # solution 설명 :
 - 주 idea
   - number_of_cases[N][L] : 마지막 수가 L인 N자리 계단수를 의미한다.
-- 1. 값 넣어논다.
+- 값 넣어논다.
 
 
 ``` python
