--- a/_posts/2018-09-27-1707.md
+++ b/_posts/2018-09-27-1707.md
@@ -10,8 +10,20 @@ comments: true
 문제:
 https://www.acmicpc.net/problem/1707
 
+# 목표:
+- 이분 그래프이면 true, 아니면 false
 
-# 방법 1
+
+# solution 설명 :
+- 주 idea
+  - 한 번도 안 간 곳은 0
+  - 처음은 1, 그것과 연결된 애는 2를 준다.
+- dfs, bfs 모두 solution을 만들어봤다.
+  - bfs는 시간초과가 난다 ㅜ
+
+
+
+# dfs 방법 1
 
 ``` python
 
@@ -19,11 +31,11 @@ import sys
 read = lambda : sys.stdin.readline().strip()
 sys.setrecursionlimit(100000)
 
-def coloring_dfs(graph, colorted, x, c):
-    colorted[x] = c
+def colored_vertex(graph, colored, x, c):
+    colored[x] = c
     for y in graph[x]:
-        if colorted[y] == 0:
-            coloring_dfs(graph, colorted, y, 3-c)
+        if colored[y] == 0: # 역시나 안간 곳이면
+            colored_vertex(graph, colored, y, 3-c) # 2를 주고, 걔랑 연관 된 애는 또 1을 준다.
 
 
 def make_graph(v, e):
@@ -40,17 +52,18 @@ def make_graph(v, e):
 def solution():
     v, e = map(int, read().split())
     graph = make_graph(v, e)
-    colorted = [0]*(v+1)
+    colored = [0]*(v+1)
     ans = 'YES'
 
     for i in range(1, v+1):
-        if colorted[i] == 0:
-            coloring_dfs(graph, colorted, i, 1)
+        if colored[i] == 0: # 한번도 안 간 곳이면
+            colored_vertex(graph, colored, i, 1) # 일단 1을 준다.
             # 1로 일단 무조건 하고 dfs속에서는 2하나만 하게하고 끝내는 건가
 
     for i in range(1, v+1):
         for j in graph[i]:
-            if colorted[i] == colorted[j]:
+            if colored[i] == colored[j]:
+                # i의 색(colored[i])이 i에 연결됬던 j와 같으면 no
                 ans = 'NO'
                 break
 
@@ -61,7 +74,7 @@ for i in range(int(read())):
 
 ```
 
-# 방법 2
+# dfs 방법 2
 
 ``` python
 import sys
@@ -81,7 +94,7 @@ def dfs(graph, color, start, c):
 				return False
 		else:
 			if color[node] == color[start]:
-                # 다음 정점 색과 현제 정점의 색이 같으면 이건 false
+        # 다음 정점 색과 현제 정점의 색이 같으면 이건 false
 				return False
 	return True
 
@@ -106,4 +119,53 @@ for _ in range(int(read())):
                 break
     print(ok)
 
+```
+
+
+# bfs 방법(시간초과)
+
+``` python
+import sys
+read = lambda : sys.stdin.readline().strip()
+sys.setrecursionlimit(100000)
+
+def solution():
+    v, e = map(int, read().split())
+    graph = {}
+    for i in range(1,v+1):
+        graph[i] = set()
+    for j in range(e):
+        a, b = map(int, read().split())
+        graph[a].add(b)
+        graph[b].add(a)
+
+    colored = [0]*(v+1)
+    ans = 'YES'
+
+    q = []
+    for i in range(1, v+1):
+        if colored[i] != 0: continue
+
+        q.append(i)
+        while len(q) != 0:
+            for j in range(0, len(q)):
+                current = q.pop(0)
+                adjcolor = 0
+                for next in graph[current]:
+                    if colored[next] ==  0:
+                        q.append(next)
+                    else:
+                        if adjcolor == 0:
+                            adjcolor = colored[next]
+                        elif adjcolor != colored[next]:
+                            ans = 'NO'
+                if adjcolor == 0:
+                    colored[current] = 1
+                else:
+                    colored[current] = 3-adjcolor
+
+    return ans
+
+for _ in range(int(read())):
+    print(solution())
 ```
