1463 답변 추가하기

--- a/_posts/2018-08-18-1463.md
+++ b/_posts/2018-08-18-1463.md
@@ -18,7 +18,10 @@ d = [0]*(n+1)
 # bottom-up
 for i in range(2, n+1):
     d[i] = d[i-1] +1
+    # -1인 값으로 답을 먼저 기본 셋팅을 한다.
     if i%2 == 0 and d[i] > d[i//2]:
+        # 2로 나눈 나머지가 0이면 그 경우의 수이기 때문에 그 -1인 값보다 d[i//2]값이 더 작으면 거기서 가져와서 넣는 것이다.
+        # 그래서 최소값을 유지할 수 있다.
         d[i] = d[i//2] + 1
     if i%3 == 0 and d[i] > d[i//3]:
         d[i] = d[i//3] + 1
